[package]
name = "shardsmith"
version = "0.0.0"
edition = "2021"
rust-version = "1.74"
description = "Shardsmith scanner: evidence-backed snapshot of local compute resources"
publish = false

[dependencies]

# ADR-0030: strict unsafe lints from the first slice. deny (not forbid) so a
# future native adapter can re-enable unsafe locally with a documented
# invariant; forbid could not be overridden at the boundary.
[lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
